name:                reflex-dom-contrib
version:             0.5.1.0
synopsis:            A place to experiment with infrastructure and common code for reflex applications
description:         This library is intended to be a public playground for
                     developing infrastructure, higher level APIs, and widget
                     libraries for reflex FRP applications. This library is
                     experimental and does not have a strong commitment to
                     preserving backwards compatibility. It will not have a
                     high bar for the quality of contributions. That being
                     said, we prefer commits that add new things rather than
                     changing existing ones. If you are wondering if there is
                     some convenience code or abstractions and you don't find
                     them in reflex or reflex-dom, look here and see if anyone
                     has already done it. If you have general-purpose reflex
                     code that you find useful that is not already here, add
                     it to this repository and send us a pull request.
homepage:            https://github.com/reflex-frp/reflex-dom-contrib
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Soostone Inc, other authors
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

Flag include-ghc-stubs
  Description:   Generate GHC stub functions for GHCJS only functions.
                 This allows compilation under GHC when using GHCJS only functions.
  Default:       True

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Contrib.Interfaces
    Reflex.Contrib.Utils
    Reflex.Dom.Contrib.CssClass
    Reflex.Dom.Contrib.KeyEvent
    Reflex.Dom.Contrib.MonadRouted
    Reflex.Dom.Contrib.Pagination
    Reflex.Dom.Contrib.Utils
    Reflex.Dom.Contrib.Vanishing
    Reflex.Dom.Contrib.Xhr
    Reflex.Dom.Contrib.Widgets.BoundedList
    Reflex.Dom.Contrib.Widgets.ButtonGroup
    Reflex.Dom.Contrib.Widgets.CheckboxList
    Reflex.Dom.Contrib.Widgets.Common
    Reflex.Dom.Contrib.Widgets.DynamicList
    Reflex.Dom.Contrib.Widgets.DynTabs
    Reflex.Dom.Contrib.Widgets.EditInPlace
    Reflex.Dom.Contrib.Widgets.Modal
    Reflex.Dom.Contrib.Widgets.Svg

--  if impl(ghcjs)
--   exposed-modules:
--     Reflex.Dom.Contrib.Geoposition

  if impl(ghcjs) || flag(include-ghc-stubs)
   exposed-modules:
     Reflex.Dom.Contrib.Router
     Reflex.Dom.Contrib.Widgets.ScriptDependent

  build-depends:
    aeson                  >= 0.8    && < 1.2,
    base                   >= 4.6    && < 4.10,
    base64-bytestring      >= 1.0    && < 1.1,
    bifunctors             >= 4.0    && < 5.5,
    bytestring             >= 0.10.8 && < 0.11,
    containers             >= 0.5    && < 0.6,
    data-default           >= 0.5    && < 0.8,
    exception-transformers >= 0.4    && < 0.5,
    ghcjs-dom              >= 0.7    && < 0.10,
    http-types             >= 0.8    && < 0.10,
    jsaddle                >= 0.8    && < 0.10,
    lens                   >= 4.9    && < 4.16,
    mtl                    >= 2.0    && < 2.3,
    random                 >= 1.0    && < 1.2,
    readable               >= 0.3    && < 0.4,
    ref-tf                 >= 0.4    && < 0.5,
    reflex                 >= 0.5    && < 0.6,
    reflex-dom-core        >= 0.4    && < 0.5,
    safe                   >= 0.3    && < 0.4,
    stm                    >= 2.1    && < 2.5,
    string-conv            >= 0.1    && < 0.2,
    text                   >= 1.2    && < 1.3,
    time                   >= 1.5    && < 1.7,
    transformers           >= 0.4    && < 0.6,
    uri-bytestring         >= 0.2    && < 0.3

  if impl(ghcjs)
    build-depends:
                  ghcjs-base >= 0.2 && < 0.3,
                  ghcjs-prim >= 0.1 && < 0.2

  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs

  if flag(include-ghc-stubs)
    cpp-options: -DGHCSTUBS
