name:                reflex-dom-contrib
version:             0.6
synopsis:            A place to experiment with infrastructure and common code for reflex applications
description:         This library is intended to be a public playground for
                     developing infrastructure, higher level APIs, and widget
                     libraries for reflex FRP applications. This library is
                     experimental and does not have a strong commitment to
                     preserving backwards compatibility. It will not have a
                     high bar for the quality of contributions. That being
                     said, we prefer commits that add new things rather than
                     changing existing ones. If you are wondering if there is
                     some convenience code or abstractions and you don't find
                     them in reflex or reflex-dom, look here and see if anyone
                     has already done it. If you have general-purpose reflex
                     code that you find useful that is not already here, add
                     it to this repository and send us a pull request.
homepage:            https://github.com/reflex-frp/reflex-dom-contrib
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Soostone Inc, other authors
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

Flag include-ghc-stubs
  Description:   Generate GHC stub functions for GHCJS only functions.
                 This allows compilation under GHC when using GHCJS only functions.
  Default:       True

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Contrib.Interfaces
    Reflex.Contrib.Utils
    Reflex.Dom.Contrib.CssClass
    Reflex.Dom.Contrib.Geoposition
    Reflex.Dom.Contrib.KeyEvent
    Reflex.Dom.Contrib.MonadRouted
    Reflex.Dom.Contrib.Pagination
    Reflex.Dom.Contrib.Utils
    Reflex.Dom.Contrib.Vanishing
    Reflex.Dom.Contrib.Xhr
    Reflex.Dom.Contrib.Widgets.BoundedList
    Reflex.Dom.Contrib.Widgets.ButtonGroup
    Reflex.Dom.Contrib.Widgets.CheckboxList
    Reflex.Dom.Contrib.Widgets.Common
    Reflex.Dom.Contrib.Widgets.DynamicList
    Reflex.Dom.Contrib.Widgets.DynTabs
    Reflex.Dom.Contrib.Widgets.EditInPlace
    Reflex.Dom.Contrib.Widgets.Modal
    Reflex.Dom.Contrib.Widgets.Svg

  if impl(ghcjs) || flag(include-ghc-stubs)
   exposed-modules:
     Reflex.Dom.Contrib.Router
     Reflex.Dom.Contrib.Widgets.ScriptDependent

  build-depends: base 
               , aeson                  
               , base                   
               , base64-bytestring      
               , bifunctors             
               , bimap                  
               , bytestring             
               , containers             
               , data-default           
               , exception-transformers 
               , exceptions             
               , ghcjs-dom              
               , http-types             
               , jsaddle                
               , lens                   
               , mtl                    
               , random                 
               , readable               
               , ref-tf                 
               , reflex                 
               , reflex-dom-core        
               , safe                   
               , stm                    
               , string-conv            
               , text                   
               , time                   
               , transformers           
               , uri-bytestring         
               
  if !impl(ghc >= 8.0)
    build-depends: semigroups 

  if impl(ghcjs)
    build-depends:
                  ghcjs-base >= 0.2 && < 0.3,
                  ghcjs-prim >= 0.1 && < 0.2

  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs

  if flag(include-ghc-stubs)
    cpp-options: -DGHCSTUBS
